very basic raw boilerplate, and minimal SQL example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(GDALSQL)
 exportClasses(GDALSQLConnection)
 exportClasses(GDALSQLDriver)
 exportMethods(dbConnect)
+exportMethods(dbSendQuery)
 exportMethods(dbUnloadDriver)
+exportMethods(show)
 import(DBI)
 import(methods)
 importFrom(rgdal2,openOGR)
