--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,16 +7,20 @@ Authors@R: c(
     )
 Description: DBI for GDAL.
     Use four spaces when indenting paragraphs within the Description.
-License: Private
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
     DBI (>= 0.3.0),
-    methods
+    methods,
+    rgdal2
 Suggests:
     DBItest,
-    testthat
+    testthat,
+    covr,
+    rgdal
 ByteCompile: yes
 URL: https://github.com/mdsumner/RGDALSQL
-BugReports: https://github.com/mdsumner/RGDALSQL
+BugReports: https://github.com/mdsumner/RGDALSQL/issues
 RoxygenNote: 5.0.1
+Remotes: edzer/rgdal2
