--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,14 @@ export(GDALSQL)
 exportClasses(GDALSQLConnection)
 exportClasses(GDALSQLDriver)
 exportClasses(GDALSQLResult)
+exportMethods(dbClearResult)
 exportMethods(dbConnect)
+exportMethods(dbDisconnect)
+exportMethods(dbFetch)
+exportMethods(dbHasCompleted)
+exportMethods(dbReadTable)
 exportMethods(dbSendQuery)
 exportMethods(dbUnloadDriver)
 exportMethods(show)
 import(DBI)
 import(methods)
-importFrom(rgdal2,openOGR)
