--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,21 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-before_install:
-  - pwd
-  - export CURWD=`pwd`
-  - cd
-  - sudo apt-get install libproj-dev
-  - wget http://download.osgeo.org/gdal/2.0.1/gdal-2.0.1.tar.gz
-  - tar zxf gdal-2.0.1.tar.gz
-  - cd gdal-2.0.1
-  - ./configure
-  - make
-  - sudo make install
-  - sudo ldconfig
-  - cd $CURWD
-
-
 language: R
 sudo: required
 cache: packages
 
-warnings_are_errors: false
+# https://github.com/ropensci/rgbif/blob/master/.travis.yml#L9
+dist: trusty
+
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install -y libudunits2-dev libproj-dev libgeos++-dev libgdal-dev
+
+
+# We use clang, --without-libtool and --with-debug for faster build
+compiler:
+  - clang
 
 after_success:
   - Rscript -e 'covr::codecov()'
