--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ exportClasses(GDALSQLResult)
 exportMethods(dbClearResult)
 exportMethods(dbConnect)
 exportMethods(dbDisconnect)
+exportMethods(dbExistsTable)
 exportMethods(dbFetch)
 exportMethods(dbHasCompleted)
+exportMethods(dbListTables)
 exportMethods(dbReadTable)
 exportMethods(dbSendQuery)
 exportMethods(dbUnloadDriver)
