passing DBItest basics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ exportClasses(GDALSQLDriver)
 exportClasses(GDALSQLResult)
 exportMethods(dbClearResult)
 exportMethods(dbConnect)
+exportMethods(dbDataType)
 exportMethods(dbDisconnect)
 exportMethods(dbExistsTable)
 exportMethods(dbFetch)
+exportMethods(dbGetInfo)
 exportMethods(dbHasCompleted)
 exportMethods(dbListTables)
 exportMethods(dbReadTable)
