--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,6 @@ exportMethods(show)
 import(DBI)
 import(methods)
 importFrom(utils,head)
+importFrom(vapour,vapour_layer_names)
+importFrom(vapour,vapour_read_attributes)
+importFrom(vapour,vapour_read_geometry_text)
